k8s/temporary-test/mysqldb-support.yml
apiVersion: v1
kind: Service
metadata:
  name: swa3-mysql
spec:
  selector:
    app: swa-mysql
  ports:
    - protocol: TCP
      port: 3306
#      nodePort: 30036 # exposing to local, to access this service
      targetPort: 3306
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  selector:
    matchLabels:
      app: swa-mysql
  template:
    metadata:
      labels:
        app: swa-mysql
    spec:
      containers:
        - name: swa-mysql
          image: mysql:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /data/db
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim
